[package]
edition = "2021"
name = "test-r"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [[example]]
# name = "main"
# path = "example/lib.rs" 

[dependencies]
dns-lookup = "1.0.8"
x25519-dalek = "1.2.0"
rand_core = { version = "0.5", default-features = false }
aes-gcm = "0.9.4"
log = "0.4"
env_logger = "0.9.0"
log4rs = "1.1.1"
clap = { version = "3.2.5", features = ["derive"] }

[dependencies.async-std]
features = ["attributes","unstable"]
version = "1.11.0"



