[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
rustls = { version = "0.20.6", features = ["dangerous_configuration", "quic"], default-features = false }
rustls-pemfile = "1.0.*"
quinn = "0.8.*"
futures-util = { version = "0.3.*", default-features = false }
tracing = "0.1.10"
anyhow = "1.0.22"
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
tracing-futures = { version = "0.2.0", default-features = false, features = ["std-future"] }
url = "2"