[package]
edition = "2021"
name = "client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.22"
clap = {version = "3.2.5", features = ["derive"]}
common = {path = "../common"}
dns-lookup = "1.0.8"
futures-util = {version = "0.3.*", default-features = false}
quinn = "0.8.*"
rustls = {version = "0.20.6", features = ["dangerous_configuration", "quic"], default-features = false}
rustls-pemfile = "1.0.*"
tokio = {version = "1.20.1", features = ["full"]}
tracing = "0.1.10"
tracing-futures = {version = "0.2.0", default-features = false, features = ["std-future"]}
tracing-subscriber = {version = "0.3.0", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"]}
url = "2"
bincode = "1.3.3"