[package]
edition = "2021"
name = "common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
rcgen = "0.9.3"
serde = {version = "1.0", features = ["derive"]}
quinn = "0.8.*"
tokio = { version = "1.20.1", features = ["full"] }