[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
rustls = { version = "0.20.6", features = ["quic"], default-features = false }
rustls-pemfile = "1.0.*"
quinn = "0.8.*"
futures-util = { version = "0.3.*", default-features = false }
